week 2 assignment completed
