# server.js
@@ -1,10 +1,13 @@
 const express = require('express');
+const dotenv = require('dotenv')
+dotenv.config()
 const app = express();
 cors = require('cors');
 const {connecToDb} = require('./model/database');
 const bodyParser = require('body-parser')
 const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger-output.json');
+// const swaggerDocument = require('./swagger-output.json');
+const swaggerDocs = require('./swaggerOptions');
 
 const port = process.env.PORT || 8000
 connecToDb((err, db) => {
@@ -14,7 +17,7 @@ connecToDb((err, db) => {
   } else {
     console.log('Database connected successfully');
 
-    app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+    app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocs));
     app.use(cors());
     app.use(bodyParser.json());
     app.use(express.urlencoded({ extended: true }));
